--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 license = "CC0-1.0"
 
 [dependencies]
-nostr = "0.43.1"
 serde_json = "1.0.108"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.37"
 fjall = "2"
+ergo_client = { git = "https://github.com/SethDusek/ergo_client.git" }
+ergo-lib = { version = "0.28.0", features = [
+    "compiler",
+] }
