--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
-[package]
+[workspace]
+members = ["crates/*"]
+resolver = "2"
+
+[workspace.package]
 name = "basis-tracker"
 version = "0.1.0"
 edition = "2021"
 license = "CC0-1.0"
 
-[dependencies]
+[workspace.dependencies]
 serde_json = "1.0.108"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
