--- a/crates/basis_server/Cargo.toml
+++ b/crates/basis_server/Cargo.toml
@@ -1,5 +1,14 @@
 [package]
 name = "basis_server"
-version.workspace = true
-edition.workspace = true
-license.workspace = true
+version = "0.1.0"
+edition = "2021"
+license = "CC0-1.0"
+
+[features]
+default = []
+bin = []
+
+[[bin]]
+name = "basis_server"
+path = "src/main.rs"
+required-features = ["bin"]
