--- a/crates/basis_server/Cargo.toml
+++ b/crates/basis_server/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 license = "CC0-1.0"
 
-[features]
-default = []
-bin = []
+[dependencies]
+axum = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
+tracing = { workspace = true }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tower-http = { version = "0.5", features = ["trace"] }
 
 [[bin]]
 name = "basis_server"
 path = "src/main.rs"
-required-features = ["bin"]
