--- a/crates/basis_server/Cargo.toml
+++ b/crates/basis_server/Cargo.toml
@@ -10,6 +10,12 @@ tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tower-http = { version = "0.5", features = ["trace"] }
+serde = { workspace = true }
+serde_json = { workspace = true }
+hex = "0.4"
+
+[dependencies.basis_store]
+path = "../basis_store"
 
 [[bin]]
 name = "basis_server"
