--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -14,3 +14,6 @@ fjall = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tempfile = "3.10.0"
+hex = "0.4"
+thiserror = "1.0"
+tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
