--- a/config/basis.toml
+++ b/config/basis.toml
@@ -1,5 +1,5 @@
 [server]
-host = "127.0.0.1"
+host = "0.0.0.0"
 port = 3000
 database_url = "sqlite:data/basis.db"
 
@@ -8,6 +8,6 @@ basis_contract_template = ""
 start_height = 0
 
 [ergo.node]
-url = "http://localhost:9053"
+url = ""
 api_key = ""
-timeout_secs = 30
+timeout_secs = 1
