--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -13,6 +13,7 @@ ergo_avltree_rust = { workspace = true }
 fjall = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+tracing = { workspace = true }
 tempfile = "3.10.0"
 hex = "0.4"
 thiserror = "1.0"
