notes sign/verify

--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -18,3 +18,8 @@ tempfile = "3.10.0"
 hex = "0.4"
 thiserror = "1.0"
 tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
+secp256k1 = { version = "0.27", features = ["rand-std"] }
+blake2 = { workspace = true }
+# ergo-lib = { workspace = true, features = ["compiler"] }
+num-bigint = "0.4.6"
+# rand = "0.8"
