--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ ergo-lib = { version = "0.28.0", features = [
     "compiler",
 ] }
 ergo_avltree_rust = "0.1.1"
+secp256k1 = "0.27"
+blake2 = "0.10"
