--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -18,6 +18,7 @@ tempfile = "3.10.0"
 hex = "0.4"
 thiserror = "1.0"
 tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
+# reqwest = { version = "0.11.18", features = ["json"] }
 secp256k1 = { version = "0.27", features = ["rand-std"] }
 blake2 = { workspace = true }
 # ergo-lib = { workspace = true, features = ["compiler"] }
