--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -17,8 +17,15 @@ tracing = { workspace = true }
 tempfile = "3.10.0"
 hex = "0.4"
 thiserror = "1.0"
-tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
+tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
 secp256k1 = { version = "0.27", features = ["rand-std"] }
 blake2 = { workspace = true }
 num-bigint = "0.4.6"
 rand = "0.8"
+# Using reqwest with rustls to avoid OpenSSL dependencies
+reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false, optional = true }
+
+[features]
+default = ["minimal_scanner"]
+minimal_scanner = ["reqwest"]
+real_scanner = ["minimal_scanner"]  # Alias for backward compatibility
