--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -26,6 +26,5 @@ rand = "0.8"
 reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false, optional = true }
 
 [features]
-default = ["minimal_scanner"]
-minimal_scanner = ["reqwest"]
-real_scanner = ["minimal_scanner"]  # Alias for backward compatibility
+default = ["ergo_scanner"]
+ergo_scanner = ["reqwest"]  # Ergo scanner using /scan and /blockchain APIs
