--- a/crates/basis_cli/Cargo.toml
+++ b/crates/basis_cli/Cargo.toml
@@ -8,6 +8,10 @@ license = "CC0-1.0"
 default = []
 bin = []
 
+# Test dependencies
+[dev-dependencies]
+basis_store = { path = "../basis_store" }
+
 [[bin]]
 name = "basis_cli"
 path = "src/main.rs"
