--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -25,6 +25,12 @@ rand = "0.8"
 # Using reqwest with rustls to avoid OpenSSL dependencies
 reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false, optional = true }
 
+# Test dependencies
+[dev-dependencies]
+proptest = "1.0"
+criterion = "0.5"
+tempfile = "3.10.0"
+
 [features]
 default = ["ergo_scanner"]
 ergo_scanner = ["reqwest"]  # Ergo scanner using /scan and /blockchain APIs
