--- a/crates/basis_cli/Cargo.toml
+++ b/crates/basis_cli/Cargo.toml
@@ -4,8 +4,27 @@ version = "0.1.0"
 edition = "2021"
 license = "CC0-1.0"
 
+[dependencies]
+clap = { version = "4.0", features = ["derive"] }
+ureq = { version = "2.9", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
+secp256k1 = { version = "0.27", features = ["rand-std", "global-context"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+hex = "0.4"
+anyhow = "1.0"
+thiserror = "1.0"
+config = "0.13"
+dirs = "5.0"
+blake2 = "0.10"
+rand = "0.8"
+toml = "0.8"
+
+# Workspace dependencies
+basis_store = { path = "../basis_store" }
+
 [features]
-default = []
+default = ["bin"]
 bin = []
 
 # Test dependencies
