--- a/crates/basis_server/Cargo.toml
+++ b/crates/basis_server/Cargo.toml
@@ -9,7 +9,7 @@ axum = { workspace = true, features = ["macros"] }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-tower-http = { version = "0.6", features = ["trace"] }
+tower-http = { version = "0.6", features = ["trace", "cors"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 hex = "0.4"
@@ -24,7 +24,7 @@ features = ["toml"]
 # Test dependencies
 [dev-dependencies]
 tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
-tower = "0.4"
+tower = { version = "0.4", features = ["util"] }
 
 [[bin]]
 name = "basis_server"
