--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1.37"
 axum = "0.8.6"
 fjall = "2"
-# ergo-lib removed due to dependency conflicts with Rust 1.82.0
-# Using minimal scanner approach instead
 ergo_avltree_rust = "0.1.1"
 secp256k1 = "0.27"
 blake2 = "0.10"
+# Ergo blockchain dependencies for scanner - using compatible versions
+ergo-lib = "0.13.0"
+thiserror = "1.0"
