--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = { workspace = true }
 tracing = { workspace = true }
 tempfile = "3.10.0"
 hex = "0.4"
-thiserror = "1.0"
+thiserror = { workspace = true }
 tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
 secp256k1 = { version = "0.27", features = ["rand-std"] }
 blake2 = { workspace = true }
@@ -24,6 +24,8 @@ num-bigint = "0.4.6"
 rand = "0.8"
 # Using reqwest with rustls to avoid OpenSSL dependencies
 reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false, optional = true }
+# Ergo blockchain dependencies for scanner - using compatible version
+ergo-lib = { workspace = true }
 
 # Test dependencies
 [dev-dependencies]
