--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ blake2 = "0.10"
 # Ergo blockchain dependencies for scanner - using compatible versions
 ergo-lib = "0.13.0"
 thiserror = "1.0"
+reqwest = "0.11"
