--- a/crates/basis_trees/Cargo.toml
+++ b/crates/basis_trees/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 fjall = { workspace = true }
 thiserror = { workspace = true }
+bincode = "1.3"
 
 [dev-dependencies]
 tempfile = "3.10"
