--- a/crates/basis_trees/Cargo.toml
+++ b/crates/basis_trees/Cargo.toml
@@ -9,6 +9,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+blake2 = { workspace = true }
 
 thiserror = { workspace = true }
 bincode = "1.3"
