--- a/crates/basis_offchain/Cargo.toml
+++ b/crates/basis_offchain/Cargo.toml
@@ -7,3 +7,13 @@ license = "CC0-1.0"
 [lib]
 name = "basis_offchain"
 path = "src/lib.rs"
+
+[dependencies]
+ergo-lib = { workspace = true }
+thiserror = { workspace = true }
+serde = { workspace = true }
+blake2 = { workspace = true }
+secp256k1 = { version = "0.27", features = ["rand-std"] }
+num-bigint = "0.4.6"
+rand = "0.8"
+hex = "0.4"
