--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -28,6 +28,8 @@ reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-feat
 ergo-lib = { workspace = true }
 # Basis trees for persistent AVL tree storage
 basis_trees = { path = "../basis_trees" }
+# Offchain functionality
+basis_offchain = { path = "../basis_offchain" }
 
 # Test dependencies
 [dev-dependencies]
