--- a/crates/basis_server/Cargo.toml
+++ b/crates/basis_server/Cargo.toml
@@ -13,6 +13,7 @@ tower-http = { version = "0.6", features = ["trace", "cors"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 hex = "0.4"
+ergo-lib = { workspace = true }
 
 [dependencies.basis_store]
 path = "../basis_store"
