--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
-members = ["crates/*"]
+members = ["crates/*", "crates/integration_tests"]
+
 resolver = "2"
 
 [workspace.dependencies]
