blake2b256, cross verification for signatures done by the node

--- a/crates/basis_server/Cargo.toml
+++ b/crates/basis_server/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = { workspace = true }
 hex = "0.4"
 ergo-lib = { workspace = true }
 blake2 = "0.10"
+generic-array = "0.14"
 
 [dependencies.basis_store]
 path = "../basis_store"
