--- a/crates/basis_store/Cargo.toml
+++ b/crates/basis_store/Cargo.toml
@@ -20,6 +20,7 @@ thiserror = { workspace = true }
 tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
 secp256k1 = { version = "0.27", features = ["rand-std"] }
 blake2 = { workspace = true }
+generic-array = "0.14"
 num-bigint = "0.4.6"
 rand = "0.8"
 # Using reqwest with rustls to avoid OpenSSL dependencies
